# NanoDegreeProject

./: CS2413_project_reflection.md  Deep Learning reflection.md  IPND, stage0lesson1, homework.html  Intro to programming, lesson 0.html  README.md  Review history.md  Titanic_Data_Analysis.html  Udacity project review, history.md  fill-in-the-blanks.py
.ipynb_checkpoints/: Technical interview-checkpoint.ipynb
BAND/: project 1, predict catalog demand.ipynb
Boston Housing/: boston_housing.html  boston_housing.ipynb
CIFAR10_image_recognition/: dlnd_image_classification.html  dlnd_image_classification.ipynb
CarND/: final, 4+5.ipynb
CarND2/p1_extended_kalman_filter/: CMakeLists.txt  ExtendedKF  FusionEKF.cpp  FusionEKF.h  Makefile  README.md  data_plot.ipynb  kalman_filter.cpp  kalman_filter.h  main.cpp  measurement_package.h  obj_pose-laser-radar-synthetic-input.csv  tools.cpp  tools.h
Customer Segments/: customer_segments.html  customer_segments.ipynb
Finding Donors/: finding_donors.html  finding_donors.ipynb
IPND, stage 1 project/: About Me.html  aboutme.css
Smartcab/: agent.py  smartcab.html  smartcab.ipynb
TV_script_generation/: dlnd_tv_script_generation.html  dlnd_tv_script_generation.ipynb
TensorBoard/: README.md  board_gan.py  board_lenet.py  board_rnn.py
Test a Perceptual Phenomenon/: Test a Perceptual Phenomenon.ipynb  Test+a+Perceptual+Phenomenon.html
Titanic Survival Exploration/: titanic_survival_exploration.html  titanic_survival_exploration.ipynb
advanced_laneline/: writeup_advanced_laneline.md
behavioral_cloning/: README.md  (+2 more)
(+177 files in other folders)
